Popover | Fix rebase conflicts, fix z-index

--- a/src/scss/components/popovers/_base.scss
+++ b/src/scss/components/popovers/_base.scss
@@ -1,3 +1,5 @@
+$tooltip-arrow-size: rem(8px);
+
 .has-popover {
   display: inline-block;
   position: relative;
